--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="navigation">
 
-        <nav class="nav-bar container">
+        <nav class="nav-bar">
             <a href="#"> LOGO </a>
             <ul class="nav-lista">
                 <li class="nav-item">
@@ -30,7 +30,7 @@
         </nav>
     </header>
 
-    <main class="corpo">
+    <main class="body">
         <div class="sobre" id="section-sobre">
 
 
@@ -58,11 +58,10 @@
 
         <div class="planos container-planos" id="section-planos">
             <div>
-                <h2>PLANOS</h2>
                 <table class="tabela">
                     <thead>
                         <tr>
-                            <th colspan="3"> Tabela de Planos </th>
+                            <th colspan="3" class="titulo">Tabela de Planos</th>
                         </tr>
                         <tr>
                             <th> uma plataforma </th>
@@ -72,39 +71,21 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>
-
-                            </td>
-                            <td>
-
-                            </td>
-                            <td>
-
-                            </td>
+                            <td> aluguel de até 3 jogos por mês </td>
+                            <td> aluguel de até 7 jogos por mês </td>
+                            <td> aluguel de até 15 jogos por mês </td>
                         </tr>
                         <tr>
-                            <td>
-
-                            </td>
-                            <td>
-
-                            </td>
-                            <td>
-
-                            </td>
+                            <td> um controle </td>
+                            <td> dois controles por plataforma </td>
+                            <td> dois controles por plataforma </td>
                         </tr>
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td>
-
-                            </td>
-                            <td>
-
-                            </td>
-                            <td>
-
-                            </td>
+                            <td> R$ 100/mês</td>
+                            <td> R$ 170/mês</td>
+                            <td> R$ 250/mês</td>
                         </tr>
                     </tfoot>
 
@@ -113,35 +94,29 @@
         </div>
 
         <div class="contato" id="section-contato">
-            <form class="formulario-contato" action="https://formspree.io/f/mnqyzagg" method="POST">
-                <div class="bloco-form">
-                    <h2>ENTRE EM CONTATO CONOSCO PARA MAIS INFORMAÇÕES</h2>
-                    <div class="campos-form">
-                        <div> Nome: <input class="nome" name="nome" type="text" required /></div>
-                        <div> e-Mail: <input class="email" name="email" type="email" /></div>
-                        <div> Telefone: <input class="telefone" name="telefone" type="tel" /></div>
-                        <div class="titulo-msg"> Mensagem: <br>
-                            <textarea class="campo-texto" name="texto" cols="100" rows="5"
-                                maxlength="10000"> </textarea><br>
-                        </div>
-                        <input class="botao-form" name="submit" type="submit" value="enviar" />
+            <div class="bloco-form">
+                <h2>DÚVIDAS?<br>ENTRE EM CONTATO!</h2>
+                <form class="formulario-contato" action="https://formspree.io/f/mnqyzagg" method="POST">
+                    <div class="campos-form"><input class="nome" placeholder="NOME" name="nome" type="text" required />
                     </div>
-                </div>
-            </form>
+                    <div class="campos-form"><input class="email" placeholder="ENDEREÇO DE EMAIL" name="email"
+                            type="email" /></div>
+                    <div class="campos-form"><input class="telefone" placeholder="TELEFONE" name="telefone"
+                            type="tel" /></div>
+                    <div class="campos-form"><textarea placeholder="MENSAGEM" name="mensagem" cols="100"
+                            rows="5"></textarea></div>
+                    <input class="botao-form" name="submit" type="submit" value="enviar" />
+            </div>
+        </div>
+        </form>
         </div>
 
     </main>
 
     <div>
-        <footer class="menu-footer">
-            <nav>
-                <div class="links-footer">
-                    <a href="./produtos.html"> PRODUTOS </a>
-                    <a href="./about.html"> SOBRE NÓS </a>
-                    <a href="./contato.html"> CONTATO </a>
-                </div>
-                <i class="icon-facebook"></i>
-            </nav>
+        <footer>
+            <img src="" alt="" title="">
+            <p>2023 - Todos os direitos reservados</p>
         </footer>
     </div>
 
