--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
     <header class="navigation">
-
         <nav class="nav-bar">
             <a href="#"> LOGO </a>
             <ul class="nav-lista">
@@ -32,6 +31,9 @@
 
     <main class="body">
         <div class="sobre" id="section-sobre">
+            <h2>SOBRE A EMPRESA</h2>
+            <p>Somos uma empresa de aluguel de consoles e jogos. <br>
+            </p>
 
 
         </div>
@@ -39,24 +41,30 @@
         <div class="produto container-prod" id="section-prod">
             <div class="cards">
                 <div class="card produto1">
-                    <h2 class="titulo-produto-gde">PLATAFORMA 1</h2>
-                    <h3 class="titulo-produto-peq">PLATAFORMA 1</h3>
-                    <p class="descricao">descricaodoproduto1</p>
+                    <h2 class="titulo-produto-gde">PLAYSTATION </h2>
+                    <h3 class="titulo-produto-peq">PLAYSTATION 5</h3>
+                    <p class="descricao">O PlayStation 5 (PS5) faz parte da nova geração de consoles da Sony.<br>
+                        Por dentro, ele tem processador de 8 núcleos, placa gráfica AMD Radeon RDNA 2, 16 GB de RAM
+                        GDDR6, 825 GB de memória SSD e suporte a jogos em até 8K, com 4K a 120 Hz.</p>
                 </div>
                 <div class="card produto2">
-                    <h2 class="titulo-produto-gde">PLATAFORMA 2</h2>
-                    <h3 class="titulo-produto-peq">PLATAFORMA 2</h3>
-                    <p class="descricao">descricaodoproduto2</p>
+                    <h2 class="titulo-produto-gde">XBOX </h2>
+                    <h3 class="titulo-produto-peq">XBOX X|S</h3>
+                    <p class="descricao">Xbox é uma marca de consoles de jogos eletrônicos criada pela Microsoft.<br>
+                        O videogame tem duas versões: Xbox One S, o mesmo console, porém com tamanho slim, e Xbox One X,
+                        uma versão mais poderosa capaz de rodar jogos em resolução 4K.</p>
                 </div>
                 <div class="card produto3">
-                    <h2 class="titulo-produto-gde">PLATAFORMA 3</h2>
-                    <h3 class="titulo-produto-peq">PLATAFORMA 3</h3>
-                    <p class="descricao">descricaodoproduto3</p>
+                    <h2 class="titulo-produto-gde">NINTENDO </h2>
+                    <h3 class="titulo-produto-peq">NINTENDO SWITCH</h3>
+                    <p class="descricao">O console que lhe permite jogar os jogos que quiser, onde e como quiser.<br>
+                        Com o Nintendo Switch, a fabricante de consoles japonesa arriscou em misturar os dois mundos dos
+                        games: portáteis e consoles de mesa. </p>
                 </div>
             </div>
         </div>
 
-        <div class="planos container-planos" id="section-planos">
+        <div class="container-planos" id="section-planos">
             <div>
                 <table class="tabela">
                     <thead>
@@ -110,7 +118,6 @@
         </div>
         </form>
         </div>
-
     </main>
 
     <div>
@@ -121,7 +128,4 @@
     </div>
 
 </body>
-
-
-
 </html>
