--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="navigation">
         <nav class="nav-bar">
-            <a href="#"> LOGO </a>
+            <a href="#" class="logo"> <img src="./imagens/logo.png" width="65px"> </a>
             <ul class="nav-lista">
                 <li class="nav-item">
                     <a href="#section-sobre" class="botao"> SOBRE NÓS </a>
@@ -31,8 +31,12 @@
 
     <main class="body">
         <div class="sobre" id="section-sobre">
-            <h2>SOBRE A EMPRESA</h2>
-            <p>Somos uma empresa de aluguel de consoles e jogos. <br>
+            <div class="titulo-sobre"><h2>SOBRE A EMPRESA</h2><br></div>
+            <div class="paragrafo-sobre"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut eros dictum, suscipit odio a, tempus nunc. Nullam eget ex eu dui semper elementum pellentesque id mi. Aliquam cursus viverra fermentum. Integer vel eleifend sem. Integer egestas odio in justo ullamcorper congue. Proin efficitur dui sit amet arcu vestibulum vehicula. Proin molestie cursus ex, nec pretium ligula efficitur quis. Nulla ornare elementum nulla, at dictum odio ultrices eget. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
+
+                <br>Phasellus mattis, est lacinia egestas maximus, nibh mi dictum dolor, nec luctus libero justo in nibh. Vivamus nec odio ante. Ut tincidunt id risus in elementum. Duis tincidunt lacus eget lacus commodo dignissim. Nullam eget ligula vitae turpis tincidunt faucibus. Donec at arcu tincidunt, ultricies diam eget, congue elit. Ut luctus tincidunt malesuada. Ut non viverra risus. Nunc eget odio dapibus odio consectetur fringilla. Mauris volutpat diam ante, ut tincidunt ipsum congue pharetra. Proin vestibulum magna sit amet nunc placerat aliquam. Praesent eu imperdiet elit.
+                
+                <br></div>
             </p>
 
 
@@ -122,7 +126,7 @@
 
     <div>
         <footer>
-            <img src="" alt="" title="">
+            <a href="#"><img src="./imagens/logo.png" width="65px"></a>
             <p>2023 - Todos os direitos reservados</p>
         </footer>
     </div>
