--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td> aluguel de até 3 jogos por mês </td>
-                            <td> aluguel de até 7 jogos por mês </td>
-                            <td> aluguel de até 15 jogos por mês </td>
+                            <td> aluguel + 3 jogos por mês </td>
+                            <td> aluguel + 7 jogos por mês </td>
+                            <td> aluguel + 15 jogos por mês </td>
                         </tr>
                         <tr>
                             <td> um controle </td>
